[package]
name = "antelope_claimrewards"
version = "0.1.0"
authors = ["Denis <denis@pinax.network>"]
description = "Antelope Block Producer claim rewards (Block Pay & Vote Pay)."
license = "MIT"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
substreams-antelope = "0.4"

[dependencies]
substreams = "0.5"
substreams-antelope = "0.4"
substreams-entity-change = "1.3.0"
prost = "0.11"
prost-types = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
