[package]
name = "antelope_bps"
version = "0.1.0"
authors = ["Denis <denis@pinax.network>", "Yaro <yaro@pinax.network"]
description = "Antelope Block Producer registrations and rewards."
license = "MIT"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
substreams-antelope = "0.4"

[dependencies]
substreams = "0.5"
substreams-antelope = "0.4"
antelope = "0.2.0"
prost = "0.11"
prost-types = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
